# opengl-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
resources/shaders/: base.vert  comp.frag  gbuffer.frag  gbuffer.vert  ibl_occlusion.comp  irradiance.comp  irradiance_specular.comp  lighting_direct.frag  lighting_ibl.frag  lighting_pbr.frag  output_texture.frag  quad.frag  quad.vert  shadow.vert  shadow_omni.geom  shadow_omni.vert  skybox.frag  skybox.vert  standard_forward.frag  standard_forward.vert  standard_pbr.frag  standard_pbr.vert
resources/shaders/bloom/: brightPass.glsl  upSamplePass.glsl
resources/shaders/compute/: add.glsl  blur.glsl  downsample.glsl  mix.glsl
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  ComputeShader.cpp  ComputeShader.h  Frustum.cpp  Frustum.hpp  IndexBuffer.cpp  IndexBuffer.h  Light.h  Material.cpp  Material.h  Mesh.h  Node.h  PostProcessingEffect.h  Primitive.h  Program.cpp  Program.h  RenderFeatures.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SinglePassComputeEffect.cpp  SinglePassComputeEffect.h  State.h  Texture.h  TextureManager.cpp  TextureManager.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  (+1 more)
src/UI/: CollapsedEntityComponent.cpp  CollapsedEntityComponent.h  LightComponent.cpp  LightComponent.h  RendererComponent.h  UI.cpp  UI.h
src/postprocessing/: Blur.cpp  Blur.h  HDRBloom.cpp  HDRBloom.h  HDRToneMapping.h  PostProcessingEffects.h
src/renderpipeline/: BasePass.cpp  BasePass.h  FrameBuffer.cpp  FrameBuffer.h  FullscreenPass.cpp  FullscreenPass.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h
src/renderpipeline/passes/: CompositionPass.cpp  CompositionPass.h  DebugOutputPass.cpp  (+13 more)
src/scene/: CameraDescription.h  EnvironmentDescription.h  LightDescription.h  MaterialDescription.h
